--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf8"/>
 	<link rel="Stylesheet" href="/rsc/css/jquery.contextMenu.css"/>
 	<link rel="Stylesheet" href="/rsc/css/jquery.treeview.css"/>
     </head>
@@ -7,6 +8,7 @@
 	<div id="treeDiv" class="treeview-black">
 		###tree###
 	</div>
+	Plusz funkciók a context menün keresztül érhetőek el.
 	<ul id="myMenu" class="contextMenu">
 	    <li class="edit">
 		<a href="#rename">Rename</a>
